infra/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ventai
  labels:
    name: ventai
    environment: production
